Dither with blue noise in screen space

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -94,3 +94,9 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[/Script/Engine.GameUserSettings]
+ResolutionSizeX=2560
+ResolutionSizeY=1440
+FullscreenMode=1
+
