Add in modified example project from Caius Blog (https://itscai.us/blog/post/ue-view-extensions/) to showcase custom global shaders.

--- a/NoiseVelocity.uproject
+++ b/NoiseVelocity.uproject
@@ -11,6 +11,11 @@
 			"AdditionalDependencies": [
 				"Engine"
 			]
+		},
+		{
+			"Name": "CustomComputeShadersModule",
+			"Type": "Runtime",
+			"LoadingPhase": "PostConfigInit"
 		}
 	],
 	"Plugins": [
