--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -28,6 +28,8 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.MotionBlur=False
 r.CustomDepth=3
+r.AntiAliasingMethod=0
+r.Mobile.AntiAliasing=0
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
