--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,11 +5,11 @@ GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/Engine.RendererSettings]
-r.AllowStaticLighting=True
+r.AllowStaticLighting=False
 
 r.GenerateMeshDistanceFields=True
 
-r.DynamicGlobalIlluminationMethod=0
+r.DynamicGlobalIlluminationMethod=1
 
 r.ReflectionMethod=1
 
@@ -30,6 +30,8 @@ r.DefaultFeature.MotionBlur=False
 r.CustomDepth=3
 r.AntiAliasingMethod=0
 r.Mobile.AntiAliasing=0
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Method=2
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
