Most of the code for reprojecting noise, but needs some reworks on execution order

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Sponza/Sponza_Map.Sponza_Map
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
+EditorStartupMap=/Game/Sponza/Sponza_Map.Sponza_Map
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
