--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,7 +27,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
-r.DefaultFeature.MotionBlur=True
+r.DefaultFeature.MotionBlur=False
 r.CustomDepth=3
 r.AntiAliasingMethod=0
 r.Mobile.AntiAliasing=0
